Added tests for mapping records with nested records.
Process Feedback in preparation of release.

- Renamed RecordConstruct, to BeanRecordConstruct, to comply with
  naming conventions.
- Renamed RecordConstructMode, to BeanRecordConstructMode, to comply
  naming conventions.
- Replaced FlushAfterClearInstruction-enum with the more widely-usable
  Trinary-enum.
- Retouched DefaultBeanInitializer, to use BeanMapper's utility methods
  as much as possible.
- Updated CHANGELOG.md

Added arbitrarily deep Optional Mapping

- BeanMapper#map(Optional, Class) should now allow for mapping of
  Optional<Optional<?>> to a target class. Every Optional may also
  contain another Optional. The only limit is the recursion limit.
- It is now possible to automatically map Optional<X> to Optional<Y>,
due to changes in the OptionalToObjectConverter.
- Supports mapping Optional<List<X>> to Optional<List<Y>>. Same for
  Sets.
- Added mapping Optional<Map<X>> to Optional<Map<Y>>.

Fixes FieldShadowingException for ignored fields.

- Ignoring fields with BeanIgnore-annotation when detecting field
  shadowing.
- Fixed problem with getting a class using the name of an accessor.

Fix for #132

- Added BeanMatchStore#detectBeanPropertyFieldShadowing(PropertyAccessor
  , io.beanmapper.annotations.BeanProperty), which detects field
  shadowing and throws a FieldShadowingException when appropriate.

Added Mapping to and from Record-classes

- Improved the use of generics in BeanConverter, and its derived
  classes.
- Changed AbstractBeanConverter#convert, to allow the mapping of null to
  primitives, by using the default value for the relevant primitive,
  using Configuration#getDefaultValuesForClass(Class).
- Modified AbstractMapStrategy#convert, to offer null-values to
  BeanConverters.
- Added AssertionUtils to tests, containing some useful macros for
  certain tedious-to-write assertions.
- Added documentation to BeanAlias, to - hopefully - make it easier to
  understand its purpose, and map